--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura Discord</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <div class="row">
-                <div class="col"></div>
+
+    <header>
+        <div class="container">
+            <div class="rowh">
+                <div class="colh"> </div>
+                <div class="colh"></div>
+                <div class="colh"></div>
             </div>
             <div class="row">
                 <div class="col"></div>
             </div>
-        </header>
+        </div>
+    </header>
     </div>
-    
+
 </body>
+
 </html>
