--- a/index.html
+++ b/index.html
@@ -11,18 +11,33 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="containerh">
             <div class="rowh">
-                <div class="colh"> </div>
-                <div class="colh"></div>
-                <div class="colh"></div>
+                <div class="image"> </div>
+                <div class="menu"></div>
+                <div class="endm"></div>
             </div>
-            <div class="row">
+            <div class="rowhb">
                 <div class="col"></div>
             </div>
         </div>
     </header>
-    </div>
+
+    <main>
+        <section>
+            <div class="container"></div>
+        </section>
+        <section>
+            <div class="container"></div>
+        </section>
+        <section>
+            <div class="container"></div>
+        </section>
+        <section>
+            <div class="container"></div>
+        </section>
+    </main>
+
 
 </body>
 
