--- a/index.html
+++ b/index.html
@@ -25,16 +25,31 @@
 
     <main>
         <section>
-            <div class="container"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col1"></div>
+                    <div class="col2"></div>
+                </div>
+            </div>
+        </section>
+        <section class="centeredsec">
+            <div class="container">
+                <div class="row">
+                    <div class="col2"></div>
+                    <div class="col1"></div>
+                </div>
+            </div>
         </section>
         <section>
-            <div class="container"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col1"></div>
+                    <div class="col2"></div>
+                </div>
+            </div>
         </section>
-        <section>
-            <div class="container"></div>
-        </section>
-        <section>
-            <div class="container"></div>
+        <section class="big">
+            <div class="containerbig"></div>
         </section>
     </main>
 
