--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
             <div class="containerbig"></div>
         </section>
     </main>
-
+    
+    <footer>
+        <div class="frow">
+            <div class="fcol1"></div>
+            <div class="fcol"></div>
+            <div class="fcol"></div>
+            <div class="fcol"></div>
+            <div class="fcol"></div>
+        </div>
+        <div class="frow2">
+            <div class="fcol2"></div>
+            <div class="fcol2"></div>
+        </div>
+    </footer>
 
 </body>
 
